include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = etherape
DOC_ENTITIES = 
DOC_INCLUDES = 

# translations
DOC_LINGUAS =

# List of figures to include.  Paths are relative to the C/ subdir
DOC_FIGURES = \
		figures/all_nodes.eps \
		figures/all_nodes.png \
		figures/appmain.eps \
		figures/appmain.png \
		figures/capture_file_dlg.eps \
		figures/capture_file_dlg.png \
		figures/color_select_dlg.eps \
		figures/color_select_dlg.png \
		figures/eth_toolbar.eps \
		figures/eth_toolbar.png \
		figures/link_info.eps \
		figures/link_info.png \
		figures/node_info.eps \
		figures/node_info.png \
		figures/pref_colors_dlg.eps \
		figures/pref_colors_dlg.png \
		figures/pref_diagram_dlg.eps \
		figures/pref_diagram_dlg.png \
		figures/pref_timings_dlg.eps \
		figures/pref_timings_dlg.png \
		figures/protocol_edit_dlg.eps \
		figures/protocol_edit_dlg.png \
		figures/proto_info.eps \
		figures/proto_info.png
